--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/form-requisitos-tecnicos-construccion/form-requisitos-tecnicos-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/form-requisitos-tecnicos-construccion/form-requisitos-tecnicos-construccion.component.html
@@ -199,7 +199,7 @@
                   <!-- Fecha Inicio: <b>{{ contratacion.proyecto.contratoConstruccion[0].fechaInicioObra | date: 'dd/MM/yyyy' }}</b></p>   -->
                   <p class="mr-1em" style="margin-right: 2em;">Fecha Fin: <b>{{ contratacion.proyecto.fechaFinEtapaObra | date: 'dd/MM/yyyy' }}</b></p>  
                   <p class="mr-1em" style="margin-right: 2em;">Duración en semanas del proyecto: <b>{{ contratacion.proyecto['plazoEnSemanas'] | number : '1.1-1' }}</b></p>
-                  <p class="mr-1em" style="margin-right: 2em;">Valor total del Proyecto: <b> {{ contratacion.proyecto.valorObra | currency:'COP':'symbol-narrow':'.0-0' }} </b></p>
+                  <p class="mr-1em" style="margin-right: 2em;">Valor total del Proyecto: <b> {{ contratacion.proyecto.valorFaseConstruccion | currency:'COP':'symbol-narrow':'.0-0' }} </b></p>
     
               </div>
     
@@ -244,7 +244,7 @@
                   Fecha Inicio: <b>{{ contratacion.proyecto.fechaInicioEtapaObra | date: 'dd/MM/yyyy' }}</b></p>  
                   <p class="mr-1em" style="margin-right: 2em;">Fecha Fin: <b>{{ contratacion.proyecto.fechaFinEtapaObra | date: 'dd/MM/yyyy' }}</b></p>  
                   <p class="mr-1em" style="margin-right: 2em;">Duración en semanas del proyecto: <b>{{ contratacion.proyecto['plazoEnSemanas'] | number : '1.1-1' }}</b></p>
-                  <p class="mr-1em" style="margin-right: 2em;">Valor total del Proyecto: <b> {{ contratacion.proyecto.valorObra | currency:'COP':'symbol-narrow':'.0-0' }} </b></p>
+                  <p class="mr-1em" style="margin-right: 2em;">Valor total del Proyecto: <b> {{ contratacion.proyecto.valorFaseConstruccion | currency:'COP':'symbol-narrow':'.0-0' }} </b></p>
     
               </div>
               <section *ngIf="contratacion.proyecto.contratoConstruccion.length > 0">
