--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
@@ -163,18 +163,40 @@
     *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_administrativo"></app-tabla-gestionar-validacion-administrativo>
     -->
     <div class="botones">
-        <button mat-raised-button color="accent" (click)="download()"
-            *ngIf="detailavailabilityBudget?.numeroDDP">Descargar DDP</button>
-        <button mat-raised-button color="accent" (click)="validar()" [disabled]="!sePuedeValidarFuente() ">Validar
-            solicitud</button>
-        <button mat-raised-button color="accent" [disabled]="sePuedeValidarFuente()"
-            (click)="openDialogDevolver(0,detailavailabilityBudget?.numeroSolicitud,detailavailabilityBudget?.tipoSolicitudText)">Devolver
-            por <br> validación presupuestal</button>
-        <button mat-raised-button color="accent" [disabled]="sePuedeValidarFuente()"
-            (click)="openDialogDevolver(1,detailavailabilityBudget?.numeroSolicitud,detailavailabilityBudget?.tipoSolicitudText)">Rechazar
-            por <br> validación presupuestal</button>
-        <button mat-raised-button color="accent"
-            *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_administrativo || detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_especial"
-            (click)="gestionarFuentes(detailavailabilityBudget)">Gestionar fuentes</button>
+        <button mat-raised-button 
+                color="accent" 
+                (click)="download()"
+                *ngIf="detailavailabilityBudget?.numeroDDP">
+        Descargar DDP
+        </button>
+
+        <button mat-raised-button 
+                color="accent" 
+                (click)="validar()" 
+                [disabled]="!sePuedeValidarFuente() ">
+        Validar solicitud
+        </button>
+
+        <button mat-raised-button 
+                color="accent" 
+                [disabled]="sePuedeValidarFuente()"
+                (click)="openDialogDevolver(0,detailavailabilityBudget?.numeroSolicitud,detailavailabilityBudget?.tipoSolicitudText)">
+        Devolver por <br> validación presupuestal
+        </button>
+
+        <button mat-raised-button 
+                color="accent" 
+                [disabled]="sePuedeValidarFuente()"
+                (click)="openDialogDevolver(1,detailavailabilityBudget?.numeroSolicitud,detailavailabilityBudget?.tipoSolicitudText)">
+        Rechazar por <br> validación presupuestal
+        </button>
+
+        <button mat-raised-button 
+                color="accent"
+                *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_administrativo || detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_especial"
+                (click)="gestionarFuentes(detailavailabilityBudget)">
+        Gestionar fuentes
+    </button>
+    
     </div>
 </section>
