--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/ver-detalle-tecnico-fdos-constr/ver-detalle-tecnico-fdos-constr.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/ver-detalle-tecnico-fdos-constr/ver-detalle-tecnico-fdos-constr.component.html
@@ -23,7 +23,7 @@
             <p><strong>Fecha de aprobación de la garantía / póliza: </strong>{{this.fechaAprobacionGarantiaPoliza}}</p>
             <p><strong>Objeto:</strong></p>
             <div [innerHtml]="this.objeto"></div>
-            <p><strong>Valor inicial del contrato: </strong>{{this.valorActualContrato | currency: '':'symbol-narrow':'.0-0' }}</p>
+            <p><strong>Valor inicial del contrato: </strong>{{this.valorInicialContrato | currency: '':'symbol-narrow':'.0-0' }}</p>
             <p><strong>Valor actual del contrato: </strong>{{this.valorActualContrato | currency: '':'symbol-narrow':'.0-0' }}</p>
             <p><strong>Valor fase 1 - Preconstrucción (Estudios y diseños): </strong>{{this.valorFase1Preconstruccion | currency: '':'symbol-narrow':'.0-0' }}</p>
             <p><strong>Valor fase 2 - Construcción (Obra): </strong>{{this.valorfase2ConstruccionObra | currency: '':'symbol-narrow':'.0-0' }}</p>
