--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -30,15 +30,6 @@
                     Tipo de aportante:
                   </label>
                 </div>
-               <!-- <div class="col">
-                  <mat-form-field class="select-width">
-                    <mat-select required formControlName="tipoAportante">
-                      <mat-option *ngFor="let tipoAportante of tipoAportantes" [value]="tipoAportante.codigo">
-                        {{ tipoAportante.nombre }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>-->
                 <div class="col">
                   <mat-form-field
                     class="select-width"
@@ -71,7 +62,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.ET">
+          <div class="row" *ngIf="nuevoAportante.value && aportante.get('tipoAportante').value == this.tipoAportante.ET">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -86,30 +77,14 @@
                     Departamento
                   </label>
                 </div>
-                <!--<div class="col">
-                  <mat-form-field class="select-width capitalize">
-                    <mat-select
-                      formControlName="depaetamento"
-                      required
-                      (selectionChange)="changeDepartamento($event.value)"
-                    >
-                      <mat-option
-                        *ngFor="let departamento of listaDepartamentos"
-                        class="capitalize"
-                        [value]="departamento"
-                      >
-                        {{ departamento.descripcion }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>-->
                 <div class="col capitalize">
                   <mat-form-field
                     class="select-width"
                   >
                     <mat-select required 
                     formControlName="depaetamento"
-                    (selectionChange)="getMunAportante($event.value, 0)">
+                    (selectionChange)="getMunAportante($event.value, 0)"
+                    >
                       <mat-option
                         *ngFor="let listado of listadoDepto[0]"
                         [value]="listado.localizacionId"
@@ -137,7 +112,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.ET">
+          <div class="row" *ngIf="nuevoAportante.value && aportante.get('tipoAportante').value == this.tipoAportante.ET">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -152,15 +127,6 @@
                     Municipio
                   </label>
                 </div>
-                <!--app-expansion-panel class="col">
-                  <mat-form-field class="select-width capitalize">
-                    <mat-select formControlName="municipio" required>
-                      <mat-option *ngFor="let municipio of listaMunicipios" class="capitalize" [value]="municipio">
-                        {{ municipio.descripcion }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>-->
                 <div class="col capitalize">
                   <mat-form-field class="select-width">
                     <mat-select 
