--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -49,8 +49,8 @@
         Estado de la novedad
       </th>
       <td mat-cell *matCellDef="let element">
-        <span *ngIf="element.estadoCodigo === '10' ">{{element.estadoDescripcion}}</span>
-        <span *ngIf="element.estadoCodigo !== '10' ">{{element.estadoCodigoNombre}}</span>
+        <span *ngIf="element.estadoCodigo === '10' || element.estadoCodigo === '4'">{{element.estadoDescripcion}}</span>
+        <span *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '4'">{{element.estadoCodigoNombre}}</span>
       </td>
     </ng-container>
 
