--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
@@ -28,7 +28,7 @@
     <p>
       <b class="var-main-gris">Valor total del proyecto</b>
       <b style="margin-left: 0.2em">
-        ${{
+        {{
           contratacionProyecto.proyecto.valorObra + contratacionProyecto.proyecto.valorInterventoria
             | currency: '':'symbol-narrow':'.0-0'
         }}</b
@@ -37,13 +37,13 @@
     <p>
       <b class="var-main-gris">Valor obra</b>
       <b style="margin-left: 0.6em">
-        ${{ contratacionProyecto.proyecto.valorObra | currency: '':'symbol-narrow':'.0-0' }}
+        {{ contratacionProyecto.proyecto.valorObra | currency: '':'symbol-narrow':'.0-0' }}
       </b>
     </p>
     <p>
       <b class="var-main-gris">Valor interventoría</b>
       <b style="margin-left: 0.6em">
-        ${{ contratacionProyecto.proyecto.valorInterventoria | currency: '':'symbol-narrow':'.0-0' }}
+        {{ contratacionProyecto.proyecto.valorInterventoria | currency: '':'symbol-narrow':'.0-0' }}
       </b>
     </p>
   </div>
