--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -63,8 +63,8 @@
                   <b
                     >Solicitud
                     {{
-                      sesionComite.novedadContractual !== undefined
-                        ? sesionComite.novedadContractual.numeroSolicitud
+                      sesionComite.modificacionContractual !== undefined
+                        ? sesionComite.modificacionContractual.numeroSolicitud
                         : sesionComite.numeroSolicitud
                     }}
                   </b>
@@ -141,7 +141,7 @@
                 *ngIf="sesionComite.tipoSolicitudCodigo === tipoSolicitudCodigo.novedadContractual"
               >
                 <mat-panel-title class="expansion-style--title sub-expansion">
-                  <b>Solicitud {{ sesionComite.novedadContractual.numeroSolicitud }} </b>
+                  <b>Solicitud {{ sesionComite.modificacionContractual.numeroSolicitud }} </b>
                 </mat-panel-title>
               </mat-expansion-panel-header>
               <mat-expansion-panel-header
