--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -36,7 +36,7 @@
                                     <p><b>Tipo de aportante: </b> {{ aportante.get( 'tipoAportante' ).value.nombre }} </p>
                                     <p><b>Nombre del aportante: </b> {{ aportante.get( 'nombreAportante' ).value.nombreAportante }} </p>
                                     <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( aportante.get( 'fuenteRecursos' ).value.nombre ) }} </p>
-                                    <p><b>Valor facturado por el concepto para el aportante, después del descuento: </b> {{ aportante.get( 'valorDescuento' ).value | currency:'':'symbol-narrow': '.0-0' }} </p>
+                                    <p><b>Valor facturado por el concepto para el aportante: </b> {{ aportante.get( 'valorDescuento' ).value | currency:'':'symbol-narrow': '.0-0' }} </p>
                                 </div>
 
                                 <div>
@@ -208,11 +208,11 @@
                                                             <label  class="label-left"
                                                                     for="valorDescuento"
                                                                     [ngClass]="{ 'color-secondaryColor': (aportante.get('valorDescuento').invalid && aportante.get('valorDescuento').touched) || (aportante.get('valorDescuento').invalid && estaEditando) }">
-                                                                    Valor facturado por el concepto para el aportante, después del descuento
+                                                                    Valor facturado por el concepto para el aportante
                                                             </label>
                                                         </div>
                                                         <div class="col d-flex" style="width: 20%;">
-                                                            <mat-form-field style="width: 73%;">
+                                                            <mat-form-field style="width: 90%">
                                                                 <input  matInput
                                                                         #valorDescuento
                                                                         min="0"
@@ -433,7 +433,7 @@
                                                                                                     formControlName="valorDescuento"
                                                                                                     (keypress)="validateNumberKeypress($event)"
                                                                                                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                                                                                                    (ngModelChange)="validateDiscountValue( $event, i, j , k )"
+                                                                                                    (ngModelChange)="validateDiscountValue( $event, i, j , k, l )"
                                                                                                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                                                                                     [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                                                                         </mat-form-field>
