--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/ejecucion-financiera-gbftrec/ejecucion-financiera-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/ejecucion-financiera-gbftrec/ejecucion-financiera-gbftrec.component.html
@@ -1,20 +1,20 @@
-<mat-card class="shipping-card mainGris">
+<mat-card class="shipping-card mainGris" *ngIf="dataTableEjpresupuestal.length > 0">
     <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text textoGris">
             Ejecución presupuestal
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <app-tabla-ejpresupuestal-gbftrec *ngIf="dataTable.length > 0" [data]="dataTable"></app-tabla-ejpresupuestal-gbftrec>
+        <app-tabla-ejpresupuestal-gbftrec [data]="dataTableEjpresupuestal"></app-tabla-ejpresupuestal-gbftrec>
     </mat-card-content>
 </mat-card>
-<mat-card class="shipping-card mainGris" style="margin-top: 3em;">
+<mat-card class="shipping-card mainGris" style="margin-top: 3em;" *ngIf="dataTableEjfinanciera.length > 0">
     <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text textoGris">
             Ejecución financiera
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <app-tabla-ejfinanciera-gbftrec></app-tabla-ejfinanciera-gbftrec>
+        <app-tabla-ejfinanciera-gbftrec [data]="dataTableEjfinanciera"></app-tabla-ejfinanciera-gbftrec>
     </mat-card-content>
 </mat-card>
