--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejpresupuestal-gbftrec/tabla-ejpresupuestal-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejpresupuestal-gbftrec/tabla-ejpresupuestal-gbftrec.component.html
@@ -1,31 +1,31 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="mr-table">
     
-      <ng-container matColumnDef="componente">
+      <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Concepto </th>
-        <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.componente }}</b> </td>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.nombre }}</b> </td>
         <td *matFooterCellDef align="center" class="auxiliarTd"> <b>Valor total</b> </td>
       </ng-container>
     
       <ng-container matColumnDef="totalComprometido">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Total comprometido </th>
-        <td mat-cell *matCellDef="let element" align="center" class="color-text">  ${{ element.totalComprometido | currency:' ':'symbol-narrow':'.0-0' }} </td>
-        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">${{ total.totalComprometido | currency:' ':'symbol-narrow':'.0-0' }}</td>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text">  {{ element.totalComprometido | currency:'':'symbol-narrow':'.0-0' }} </td>
+        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.totalComprometido | currency:'':'symbol-narrow':'.0-0' }}</td>
       </ng-container>
-      <ng-container matColumnDef="facturadoAntesdeImpuestos">
+      <ng-container matColumnDef="facturadoAntesImpuestos">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Facturado antes de impuestos  </th>
-        <td mat-cell *matCellDef="let element" align="center" class="color-text"> ${{ element.facturadoAntesdeImpuestos | currency:' ':'symbol-narrow':'.0-0' }}</td>
-        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">${{ total.facturadoAntesdeImpuestos | currency:' ':'symbol-narrow':'.0-0' }}</td>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.facturadoAntesImpuestos | currency:'':'symbol-narrow':'.0-0' }}</td>
+        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.facturadoAntesImpuestos | currency:'':'symbol-narrow':'.0-0' }}</td>
       </ng-container>
       <ng-container matColumnDef="saldo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Saldo </th>
-        <td mat-cell *matCellDef="let element" align="center" class="color-text">  ${{ element.saldo | currency:' ':'symbol-narrow':'.0-0' }}  </td>
-        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;"> ${{ total.saldo | currency:' ':'symbol-narrow':'.0-0' }} </td>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text">  {{ element.saldo | currency:'':'symbol-narrow':'.0-0' }}  </td>
+        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.saldo | currency:'':'symbol-narrow':'.0-0' }} </td>
       </ng-container>
       <ng-container matColumnDef="porcentajeEjecucionPresupuestal">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Porcentaje de ejecución presupuestal </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.porcentajeEjecucionPresupuestal }} %</td>
-        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.porcentajeEjecucionPresupuestal }} %</td>
+        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.porcentajeEjecucionPresupuestal }}%</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
