--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejpresupuestal-gbftrec/tabla-ejpresupuestal-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejpresupuestal-gbftrec/tabla-ejpresupuestal-gbftrec.component.html
@@ -24,8 +24,8 @@
       </ng-container>
       <ng-container matColumnDef="porcentajeEjecucionPresupuestal">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Porcentaje de ejecución presupuestal </th>
-        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.porcentajeEjecucionPresupuestal }} %</td>
-        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.porcentajeEjecucionPresupuestal }}%</td>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.porcentajeEjecucionPresupuestal | number:'.0-2' }} %</td>
+        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.porcentajeEjecucionPresupuestal | number:'.0-2' }}%</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
