--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-pagados-gbftrec/recursos-comprom-pagados-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-pagados-gbftrec/recursos-comprom-pagados-gbftrec.component.html
@@ -19,10 +19,10 @@
             <mat-expansion-panel class="expansion-style sub-expansion">
                 <mat-expansion-panel-header class="expansion-style--header">
                     <mat-panel-title class="expansion-style--title ">
-                        Contratistas
+                        Contratistas 
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-contratistas-gbftrec *ngIf="contratoObra" [contratista]="contratoObra.contratacion.contratista"></app-contratistas-gbftrec>
+                <app-contratistas-gbftrec *ngIf="contratoObra" [contratista]="contratoObra.contratacion.contratista" [valorPagadoContratista]="contratoObra.valorPagadoContratista"></app-contratistas-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
         <mat-accordion *ngIf="contratoObra.tablaOrdenGiroValorTotal.length > 0">
@@ -49,7 +49,7 @@
                         Recursos comprometidos
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-recursos-comprom-accord-gbftrec *ngIf="contratoInterventoria" [contratacionProyecto]="contratoInterventoria.contratacion.contratacionProyecto"></app-recursos-comprom-accord-gbftrec>
+                <app-recursos-comprom-accord-gbftrec *ngIf="contratoInterventoria" [contratacionProyecto]="contratoInterventoria.contratacion.contratacionProyecto" [contratoId]="contratoObra.contratoId"></app-recursos-comprom-accord-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
         <mat-accordion>
@@ -59,7 +59,7 @@
                         Contratistas
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-contratistas-gbftrec *ngIf="contratoInterventoria" [contratista]="contratoInterventoria.contratacion.contratista"></app-contratistas-gbftrec>
+                <app-contratistas-gbftrec *ngIf="contratoInterventoria" [contratista]="contratoInterventoria.contratacion.contratista" [valorPagadoContratista]="contratoInterventoria.valorPagadoContratista"></app-contratistas-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
         <mat-accordion>
